mggt1103/tp6-k8s/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-web-interne
spec:
  selector:
    app: site-ggt
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
